# kern

./: .gitignore  CLAUDE.md  Makefile  README.md  SPEC.md  agents.json  functions.sh  install.sh  kern-backup.sh  kern.py  kern.sh  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: codebase-simplifier.md
.github/workflows/: release.yml
prompts/: 0_generate.md  0_populate_queue.md  1_research.md  1_research_plan.md  2_design.md  2_implement.md  3_commit.md  3_review_commit.md  3_structure.md  4_plan.md  5_implement.md  6_review_commit.md
scripts/: release.sh
src/kern/: __init__.py  cli.py  evaluation.py  handoff.py  logging.py  prompting.py  runlog.py  runtime.py  sdk_runner.py  stage_output.py  stages.py  state.py  types.py  validation.py
tests/: test_cli.py  test_evaluation.py  test_handoff.py  test_prompt_contract.py  test_prompting.py  test_runtime_loop.py  test_stage_output.py  test_validation.py
